Implement getBest and canContinue

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,10 @@ description:         Implementation of the IFS timetabling algorithm in Haskell
 dependencies:
 - base >= 4.7 && < 5
 - containers
+- random
+
+default-extensions:
+- RecordWildCards
 
 library:
   source-dirs: src
