Add changelog to tarball

--- a/package.yaml
+++ b/package.yaml
@@ -8,6 +8,7 @@ copyright:           "Copyright (c) Michael B. Gale and Oscar Harris"
 
 extra-source-files:
 - README.md
+- Changelog.md
 
 # Metadata used when publishing your package
 synopsis:            An IFS constraint solver
