--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                ifs
+name:                iterative-forward-search
 version:             0.1.0.0
-github:              "fpclass/ifs"
+github:              "fpclass/iterative-forward-search"
 license:             MIT
 author:              "Michael B. Gale and Oscar Harris"
 maintainer:          "m.gale@warwick.ac.uk"
@@ -38,7 +38,7 @@ library:
   source-dirs: src
 
 benchmarks:
-  ifs-bench:
+  iterative-forward-search-bench:
     main:                Main.hs
     source-dirs:         bench
     ghc-options:
@@ -46,5 +46,5 @@ benchmarks:
       - -rtsopts
       - -with-rtsopts=-N
     dependencies:
-      - ifs
+      - iterative-forward-search
       - criterion
